--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "Udemy tutorial on NodeJS third app, a real-time app using socket.io",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server/server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.15.4"
+  },
+  "engines": {
+    "node": "6.11.2"
   }
 }
