--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Udemy tutorial on NodeJS third app, a real-time app using socket.io",
   "main": "server/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha server/**/*.test.js",
+    "test-watch": "nodemon --exec npm run test",
     "start": "node server/server.js"
   },
   "author": "",
@@ -19,5 +20,10 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/AndresMartinMaq/nodeapp-practice"
+  },
+  "devDependencies": {
+    "expect": "^21.0.0",
+    "mocha": "^3.5.0",
+    "nodemon": "^1.12.0"
   }
 }
